--- a/BulkCsvImporter/BulkCsvImporter/BulkCsvImporter.csproj
+++ b/BulkCsvImporter/BulkCsvImporter/BulkCsvImporter.csproj
@@ -44,18 +44,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\Importer.cs" />
-    <Compile Include="Abstract\OptionValidator.cs" />
+    <Compile Include="Abstract\IOptionValidate.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Constant\FileSourceOptionKey.cs" />
+    <Compile Include="DatabaseImporter\SqlServerImporter.cs" />
+    <Compile Include="Enum\DatabaseType.cs" />
     <Compile Include="Enum\FileSourceType.cs" />
-    <Compile Include="Factory\OptionValidatorFactory.cs" />
+    <Compile Include="Extension\SingleFileImportOptionExtension.cs" />
     <Compile Include="Model\ActionResult.cs" />
     <Compile Include="Abstract\FileSourceOption.cs" />
+    <Compile Include="Model\DatabaseConnectOption.cs" />
+    <Compile Include="Model\ImportTagetOption.cs" />
     <Compile Include="Model\FtpFileSourceOption.cs" />
     <Compile Include="Model\LocalFileSourceOption.cs" />
     <Compile Include="Model\SingleFileImportOption.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validator\LocalFileSourceOptionValidator.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
